Fix navbar overlapping

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,7 +17,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: grey;
-  position: 0 0 0 0;
+  top: 0;
 }
 
 #sub-nav {
@@ -28,7 +28,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: grey;
-  position: 4rem 0 0 0;
+  top: 4rem;
 }
 
 .nav-link {
